# EagleCompiler

./: .gitignore  README.md
Source/EagleCompiler/ast/: AST.h  CMakeLists.txt  CodeGlobalImport.cpp  CodeGlobalImport.h  CodeGlobalInit.cpp  CodeGlobalInit.h  CodeObject.cpp  CodeObject.h  CodeParameter.cpp  CodeParameter.h  CodeProgram.cpp  CodeProgram.h
Source/EagleCompiler/ast/Declaration/: CMakeLists.txt  CodeDeclaration.cpp  CodeDeclaration.h  CodeFunctionDeclaration.cpp  CodeFunctionDeclaration.h  CodeProcedureDeclaration.cpp  CodeProcedureDeclaration.h  CodeStorageDeclaration.cpp  CodeStorageDeclaration.h
Source/EagleCompiler/ast/Expression/: CMakeLists.txt  CodeExpression.cpp  CodeExpression.h  CodeExpressionAdd.cpp  CodeExpressionAdd.h  CodeExpressionBoolean.cpp  CodeExpressionBoolean.h  CodeExpressionFactorCall.cpp  CodeExpressionFactorCall.h  CodeExpressionFactorInititialize.cpp  CodeExpressionFactorInititialize.h  CodeExpressionFactorVariable.cpp  CodeExpressionFactorVariable.h  CodeExpressionMonadicOperator.cpp  CodeExpressionMonadicOperator.h  CodeExpressionMultiply.cpp  CodeExpressionMultiply.h  CodeExpressionRelation.cpp  CodeExpressionRelation.h  CodeExpressionStringConcatenation.cpp  CodeExpressionStringConcatenation.h
Source/EagleCompiler/ast/Identifier/: CMakeLists.txt  CodeFunction.cpp  CodeFunction.h  CodeIdentifier.cpp  CodeIdentifier.h  CodeProcedure.cpp  CodeProcedure.h  CodeVariable.cpp  CodeVariable.h
Source/EagleCompiler/ast/Statement/: CMakeLists.txt  CodeAssignmentStatement.cpp  CodeAssignmentStatement.h  CodeCallStatement.cpp  CodeCallStatement.h  CodeIfStatement.cpp  CodeIfStatement.h  CodeInputStatement.cpp  CodeInputStatement.h  CodeOutputStatment.cpp  CodeOutputStatment.h  CodeStatement.cpp  CodeStatement.h  CodeWhileStatement.cpp  CodeWhileStatement.h
Source/EagleCompiler/ast/Type/: CMakeLists.txt  CodeType.cpp  CodeType.h  CodeTypeBoolean.cpp  CodeTypeBoolean.h  CodeTypeInteger32.cpp  CodeTypeInteger32.h  CodeTypeString.cpp  CodeTypeString.h
Source/EagleCompiler/ast/declaration/: CMakeLists.txt  CodeDeclaration.cpp  CodeDeclaration.h  CodeFunctionDeclaration.cpp  CodeFunctionDeclaration.h  CodeProcedureDeclaration.cpp  CodeProcedureDeclaration.h  CodeStorageDeclaration.cpp  CodeStorageDeclaration.h
Source/EagleCompiler/ast/expression/: CMakeLists.txt  CodeBinaryExpression.cpp  CodeBinaryExpression.h  CodeExpression.cpp  (+41 more)
(+116 files in other folders)
