set (Expression_src
CodeExpression.cpp
CodeExpressionStringConcatenation.cpp
CodeExpressionBoolean.cpp
CodeExpressionRelation.cpp
CodeExpressionAdd.cpp
CodeExpressionMultiply.cpp
CodeExpressionFactorVariable.cpp
CodeExpressionFactorInititialize.cpp
CodeExpressionFactorCall.cpp
CodeExpressionMonadicOperator.cpp
)
add_library(Expression ${Expression_src})
