set (expression_src
CodeExpression.cpp
CodeExpressionStringConcatenation.cpp
CodeExpressionBoolean.cpp
CodeExpressionRelation.cpp
CodeExpressionAdd.cpp
CodeExpressionMultiply.cpp
CodeExpressionFactor.cpp
CodeExpressionFactorLiteral.cpp
CodeExpressionFactorVariable.cpp
CodeExpressionFactorInitialize.cpp
CodeExpressionFactorFunctionCall.cpp
CodeExpressionMonadicOperator.cpp
)
add_library(expression OBJECT ${expression_src})
